<resources>
    <string name="app_name">IMDb2</string>
    <string name="login">Login</string>
    <string name="user">Usuario</string>
    <string name="password">Contraseña</string>
    <string name="forget_password">¿Olvidaste la contraseña?</string>
    <string name="other_apps">Ó podés ingresar con</string>
    <string name="account">¿No tienes cuenta?</string>
    <string name="register">Regístrate</string>
    <string name="continue_invited">Continuar como invitado</string>
    <string name="createAccount">Crear una cuenta</string>
    <string name="inputName">Nombre</string>
    <string name="inputEmail">Correo electrónico</string>
    <string name="inputPassword">Contraseña</string>
    <string name="charactersPassword">La contraseña debe contener 8 caracteres</string>
    <string name="buttonAcept">Aceptar</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="begining_navigation_bar">Inicio</string>
    <string name="search_navigation_bar">Buscar</string>
    <string name="play_navigation_bar">Play</string>
    <string name="account_navigation_bar">Santiago</string>


</resources>