<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".Register">

    <ImageView
        android:id="@+id/arrow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/baseline_arrow_back_24"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintVertical_bias="0.013"
        app:layout_constraintHorizontal_bias="0.024"
        />

    <ImageView
        android:id="@+id/logoBoxYellow"
        android:layout_width="140dp"
        android:layout_height="100dp"
        android:src="@drawable/logo"
        app:layout_constraintTop_toTopOf="@id/arrow"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@id/arrow"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintVertical_bias="0"
        app:layout_constraintHorizontal_bias="0.05"/>

    <TextView
        android:id="@+id/createAccount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/logoBoxYellow"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@id/logoBoxYellow"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintVertical_bias="0.02"
        app:layout_constraintHorizontal_bias="0.07"
        android:text="@string/createAccount"
        android:fontFamily="@font/roboto_bold"
        android:textColor="@color/dark_grey"
        />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/input_name"
        android:layout_width="@dimen/width_inputs"
        android:layout_height="@dimen/height_inputs"
        android:hint="@string/inputName"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        app:layout_constraintTop_toBottomOf="@id/createAccount"
        app:layout_constraintStart_toStartOf="@id/createAccount">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/input_email"
        android:layout_width="@dimen/width_inputs"
        android:layout_height="@dimen/height_inputs"
        android:hint="@string/inputEmail"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        app:layout_constraintTop_toBottomOf="@id/input_name"
        app:layout_constraintStart_toStartOf="@id/input_name"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0.02">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/input_password"
        android:layout_width="@dimen/width_inputs"
        android:layout_height="@dimen/height_inputs"
        android:hint="@string/inputPassword"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        app:layout_constraintTop_toBottomOf="@id/input_email"
        app:layout_constraintStart_toStartOf="@id/input_email"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0.02"
        app:endIconMode="password_toggle">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/charactersPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/charactersPassword"
        app:layout_constraintTop_toBottomOf="@id/input_password"
        app:layout_constraintStart_toStartOf="@id/input_password"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0.02"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/acept"
        android:layout_width="@dimen/width_inputs"
        android:layout_height="@dimen/height_inputs"
        android:background="@drawable/shape_color_button_login"
        android:enabled="false"
        android:hint="@string/buttonAcept"
        android:textColorHint="@color/white"
        android:textSize="@dimen/login"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@id/input_password"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@id/input_password"
        app:layout_constraintTop_toBottomOf="@id/input_password"
        app:layout_constraintVertical_bias="0.174"
        tools:ignore="SpUsage" />







</androidx.constraintlayout.widget.ConstraintLayout>