<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Login"
    android:background="@color/yellow"
    >

    <ImageView
        android:id="@+id/logo_imdb"
        android:layout_width="wrap_content"
        android:layout_height="125dp"
        app:srcCompat="@drawable/logo"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintVertical_bias="0.10"
        android:importantForAccessibility="no" />
    <TextView
        android:id="@+id/text_user"
        android:text="@string/user"
        style="@style/textViewUserPassLogin"
        app:layout_constraintTop_toBottomOf="@id/logo_imdb"
        app:layout_constraintBottom_toTopOf="@id/input_user"
        app:layout_constraintStart_toStartOf="@id/input_user"
        app:layout_constraintVertical_bias="0"
        tools:ignore="SpUsage" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/input_user"
        style="@style/inputUserPassword"
        android:background="@drawable/shape_white_text_box"
        app:layout_constraintTop_toBottomOf="@+id/logo_imdb"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintVertical_bias="0.06"
        />



    <TextView
        android:id="@+id/text_password"
        android:text="@string/password"
        style="@style/textViewUserPassLogin"
        app:layout_constraintTop_toBottomOf="@id/input_user"
        app:layout_constraintBottom_toTopOf="@id/input_password"
        app:layout_constraintStart_toStartOf="@id/input_password"
        app:layout_constraintVertical_bias="0.7"
        tools:ignore="SpUsage" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/input_password"
        style="@style/inputUserPassword"
        android:background="@drawable/shape_white_text_box"
        app:layout_constraintTop_toBottomOf="@id/input_user"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@id/input_user"
        app:layout_constraintEnd_toEndOf="@id/input_user"
        app:layout_constraintVertical_bias="0.13"/>

    <TextView
        android:id="@+id/text_forget_password"
        style="@style/forgetPassword"
        android:text="@string/forget_password"
        app:layout_constraintTop_toBottomOf="@id/input_password"
        app:layout_constraintBottom_toTopOf="@id/login"
        app:layout_constraintStart_toStartOf="@id/input_password"
        app:layout_constraintVertical_bias="0.04"
        tools:ignore="SpUsage" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/login"
        style="@style/buttonLoginAcept"
        android:background="@drawable/shape_color_button_login"
        android:hint="@string/login"
        android:textColorHint="@drawable/text_button_enable_disable"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@id/input_password"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@id/input_password"
        app:layout_constraintTop_toBottomOf="@id/input_password"
        app:layout_constraintVertical_bias="0.174"
        tools:ignore="SpUsage" />

    <TextView
        android:id="@+id/alternative"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/other_apps"
        android:fontFamily="@font/roboto_light_italic"
        android:textSize="@dimen/user_password"
        app:layout_constraintTop_toBottomOf="@id/login"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintVertical_bias="0.15"
        tools:ignore="SpUsage" />

    <ImageView
        android:id="@+id/icon_apple"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/apple"
        android:background="@drawable/shape_icons"
        android:padding="@dimen/padding_icons"
        app:layout_constraintTop_toBottomOf="@id/alternative"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@id/login"
        app:layout_constraintEnd_toEndOf="@id/login"
        app:layout_constraintHorizontal_bias="0.18"
        app:layout_constraintVertical_bias="0.18"
        android:importantForAccessibility="no" />

    <ImageView
        android:id="@+id/icon_facebook"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/facebook"
        android:background="@drawable/shape_icons"
        android:padding="@dimen/padding_icons"
        app:layout_constraintTop_toTopOf="@id/icon_apple"
        app:layout_constraintBottom_toBottomOf="@id/icon_apple"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.50"
        android:importantForAccessibility="no" />

    <ImageView
        android:id="@+id/icon_google"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/google"
        android:background="@drawable/shape_icons"
        android:padding="@dimen/padding_icons"
        app:layout_constraintTop_toTopOf="@id/icon_facebook"
        app:layout_constraintBottom_toBottomOf="@id/icon_facebook"
        app:layout_constraintStart_toStartOf="@id/login"
        app:layout_constraintEnd_toEndOf="@id/login"
        app:layout_constraintHorizontal_bias="0.82"
        android:importantForAccessibility="no" />

    <TextView
        android:id="@+id/no_account"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/account"
        android:fontFamily="@font/roboto_light_italic"
        android:textColor="@color/dark_grey"
        app:layout_constraintTop_toBottomOf="@id/icon_apple"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@id/icon_apple"
        app:layout_constraintEnd_toEndOf="@id/icon_google"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintVertical_bias="0.2"
        android:textSize="@dimen/no_account"
        tools:ignore="SpUsage" />

    <TextView
        android:id="@+id/register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/register"
        android:fontFamily="@font/roboto_bold"
        android:textStyle="italic"
        android:textColorHint="@color/black"
        android:textSize="@dimen/no_account"
        app:layout_constraintTop_toTopOf="@id/no_account"
        app:layout_constraintStart_toEndOf="@id/no_account"
        app:layout_constraintEnd_toEndOf="@id/icon_google"
        tools:ignore="SpUsage" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/invited"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/continue_invited"
        android:fontFamily="@font/roboto_bold"
        android:textSize="@dimen/continue_invited"
        android:textColorHint="@color/black"
        app:layout_constraintTop_toBottomOf="@id/no_account"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@id/no_account"
        app:layout_constraintEnd_toEndOf="@id/register"
        app:layout_constraintVertical_bias="0.2"
        tools:ignore="SpUsage" />

</androidx.constraintlayout.widget.ConstraintLayout>